Ensure column spacing is correct

--- a/css/templates/e-commerce/page.css
+++ b/css/templates/e-commerce/page.css
@@ -535,8 +535,8 @@ amp-selector [option][selected] {
 }
 
 @media (--breakpoint-md) {
-  .commerce-blog {
-    margin-left: calc(1/12 * 100%);
+  .commerce-blog-wrapper {
+    padding-left: calc(1/12 * 100%);
   }
 }
 
